Beginning local datetime

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
         <item>York [YRK]</item>
         <item>Kings Cross St. Pancras [KGX]</item>
         <item>Leeds [LDS]</item>
+        <item>Doncaster [DON]</item>
     </string-array>
 </resources>
